kubernetes/gke_3_service_ingress/part3_ingress/hello_gke_ing_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gke-ing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-gke-ing
  template:
    metadata:
      labels:
        app: hello-gke-ing
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "80m"
          limits:
            memory: "128Mi"
            cpu: "250m"
