kubernetes/gke_3_service_ingress/part3_ingress/hello_gke_ing_ing.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-gke-ing
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello-gke-ing
          servicePort: 80
